right monkey patching and prepare for many implementations

--- a/recastcontrolcenter/recast_interface_templates/recast_all_requests.html
+++ b/recastcontrolcenter/recast_interface_templates/recast_all_requests.html
@@ -35,7 +35,7 @@
             {% for row in requests_info %}
               <tr>
                 <td><a href=/recast/request/{{row['id']}}>{{row['title']}}</a></td>
-                <td>
+                <td style="width: 50%;">
                   {% for b in wflow_config_data[row['id']] %}
                     <span class="label label-default"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> {{b}}</span>
                   {% endfor %}
