--- a/recastcontrolcenter/recast_interface_templates/recast_request.html
+++ b/recastcontrolcenter/recast_interface_templates/recast_request.html
@@ -1,8 +1,83 @@
 {% extends "base.html" %}
 
 {% block prebody %}
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vega-tooltip/0.3.3/vega-tooltip.min.js"></script>
+<script src="https://vega.github.io/vega/vega.min.js"></script>
+<script src="https://www.promisejs.org/polyfills/promise-done-7.0.4.min.js"></script>
+
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vega-tooltip/0.3.3/vega-tooltip.min.css">
+
+
+<script type="text/javascript">
+
+
+  var view = undefined;
+  function runview2d(abcissa,ordinate,data){
+    data.signals[0].value = abcissa
+    data.signals[1].value = ordinate
+    view = new vega.View(vega.parse(data))
+      .renderer('canvas')  // set renderer (canvas or svg)
+      .initialize('#view') // initialize view within parent DOM container
+      .hover()             // enable hover encode set processing
+      .run();              // run the dataflow and render the view  )
+
+    vegaTooltip.vega(view);
+
+    view.addSignalListener('abcissa', function(name,value){
+      runview2d(view.signal('abcissa'), view.signal('ordinate'), data)
+    }) 
+    view.addSignalListener('ordinate', function(name,value){
+      runview2d(view.signal('abcissa'), view.signal('ordinate'), data)
+    }) 
+  }
+
+
+  function runview1d(abcissa,data){
+    data.signals[0].value = abcissa
+    view = new vega.View(vega.parse(data))
+      .renderer('canvas')  // set renderer (canvas or svg)
+      .initialize('#view') // initialize view within parent DOM container
+      .hover()             // enable hover encode set processing
+      .run();              // run the dataflow and render the view  )
+
+    vegaTooltip.vega(view);
+    view.addSignalListener('abcissa', function(name,value){
+      runview1d(view.signal('abcissa'),data)
+    }) 
+  }
+
+
+var vega_req_data = {{visdata|tojson|safe}}
+
+if(vega_req_data.pars.length > 1){
+  $.get('/static/vegavistemplate2d.json',function(visdata){
+    visdata.data = vega_req_data.data
+    visdata.signals[0].bind.options = vega_req_data.pars
+    visdata.signals[1].bind.options = vega_req_data.pars
+    runview2d(vega_req_data.pars[0],vega_req_data.pars[1],visdata)
+  })
+}
+else{
+  $.get('/static/vegavistemplate1d.json',function(visdata){
+    visdata.data = vega_req_data.data
+    visdata.signals[0].bind.options = vega_req_data.pars
+    runview1d(vega_req_data.pars[0],visdata)
+  })
+
+}
+</script>
+
 <script type="text/javascript">
 $(document).ready(function(){
+    $('.process-all-btn').click(function(){
+        var button = $(this);
+        wflowconfig = button.attr('data-wflowconfig')
+
+        console.log('processing all basic requests with config X')
+    })
+
     $('.process-btn').click(function(){
         var button = $(this);
         basicreqid = button.attr('data-basic-req-id')
@@ -25,12 +100,18 @@ $(document).ready(function(){
         })
     })
 
-    $('.result-btn').each(function(){
-        var button = $(this)
+    Promise.all($('.result-btn').map(function(){
+        var result_button = $(this)
 
-        var basicReqId = button.attr('data-basic-req-id')
-        var wflowconfig = button.attr('data-wflowconfig')
+
+
+        var basicReqId = result_button.attr('data-basic-req-id')
+        var wflowconfig = result_button.attr('data-wflowconfig')
         var resultsAvailable = false
+
+
+        var upload_botton = $('.upload-response-btn[data-basic-req-id='+basicReqId+'][data-wflowconfig='+wflowconfig+']');
+
 
         var url = location.origin+'/status/'+basicReqId
         $.ajax(url,{
@@ -43,24 +124,45 @@ $(document).ready(function(){
                 console.log('results are available: '+ resultsAvailable)
                 if(!resultsAvailable){
                   console.log('disabling button')
-                  button.addClass('disabled')
+                  result_button.addClass('disabled')
+                  upload_botton.addClass('disabled')
                 }
+                return true
             }
         })
+    })).then(function(res){
+      console.log('ok...')
+      $('.results-group').each(function(){
+
+          var basicreqid = $(this).attr('data-basic-req-id')
+
+          console.log($(this))
+          console.log($('.upload-group[data-basic-req-id='+basicreqid+']'))
+
+          var configswithresults = $(this).children().filter('ul').children().filter(function(){
+                  return !$(this).children().hasClass('disabled')
+
+          }).length
+
+          console.log('configs with results for ' + basicreqid + ': ' + configswithresults)
+
+          if(!configswithresults){
+            console.log('basiq: ' + basicreqid)
+
+            console.log($('.upload-group[data-basic-req-id='+basicreqid+']'))
+
+            $(this).children().filter('button').addClass('disabled')
+            $('.upload-group[data-basic-req-id='+basicreqid+']').children().filter('button').addClass('disabled')
+
+          }
+      })
     })
 
 
 
-    $('.results-group').each(function(){
-        if(!$(this).children().filter('ul').children().filter(function(){
-                return !$(this).hasClass('disabled')
-              }
-            ).length){
-          $(this).children().filter('button').addClass('disabled')
-        }
-    })
 
-    {% if not session.has_key('user') or not wflow_configs %}
+    //disabled process button if we're not logged in
+    {% if not session.has_key('user') or not wflow_configs.keys() %}
        $('.process-group button').addClass('disabled')
     {% endif %}
 
@@ -101,7 +203,7 @@ function togglejobs(basicreqid){
 </div>
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
         <div class="panel panel-primary">
 
             <div class="panel-heading">
@@ -109,7 +211,7 @@ function togglejobs(basicreqid){
             </div>
             <div class="panel-body">
                   <span class="label label-default"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> {{request_info['post_date']}}</span>
-                  <h6>Analysis</h6>
+                  <h6>Analysis {{analysis_info['id']}}</h6>
                   <p>
                     {{analysis_info['title']}}
                   </p>
@@ -120,16 +222,19 @@ function togglejobs(basicreqid){
             </div>
         </div>
     </div> <!-- col -->
+    <div class="col-md-5">
+      <div id="view"></div>
+    </div>
 </div> <!-- row -->
 
+
+<div class="row">
+</div>
 <div class="btn-group process-all-group">
   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
     Process All <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
-  {% for wc in wflow_configs %}
-    <li><a href="#" class="btn process-all-btn" data-wflowconfig="{{wc}}">{{wc}}</a></li>
-  {% endfor %}
   </ul>
 </div>
 
@@ -144,9 +249,13 @@ function togglejobs(basicreqid){
         <div class="panel-heading" role="tab" id="heading_{{loop.index}}">
           <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse_{{loop.index}}" aria-expanded="true" aria-controls="collapse_{{loop.index}}">
-              Parameter Point {{loop.index}}
+              Parameter Point {{loop.index}} 
             </a>
           </h4>
+          <span class="label label-default">{{basic_req_data.get(pp['id'],[])|length}} Basic Requests</span>
+          {% for k,v in point_coordinates[pp['id']].iteritems() %}
+          <span class="label label-default">{{k}}: {{v}}</span>
+          {% endfor %}
         </div>
         <div id="collapse_{{loop.index}}" class="panel-collapse collapse {{'%s' % 'in' if loop.index == 1}}" role="tabpanel" aria-labelledby="heading_{{loop.index}}">
           <div class="panel-body">
@@ -154,7 +263,10 @@ function togglejobs(basicreqid){
             <ul class="list-group">
               {% for br in basic_req_data[pp['id']] %}
                 <li class="list-group-item">
-                    <strong>Basic Request {{loop.index}}: </strong>
+                    <strong>Basic Request {{loop.index}}: </strong
+                    ><span class="label label-default">Format: {{br['request_format']}}</span>
+
+
                     <!-- The UI buttons -->
                     <span>
                     <!-- Single button -->
@@ -163,8 +275,12 @@ function togglejobs(basicreqid){
                         Process <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" role="menu">
-                      {% for wc in wflow_configs %}
-                        <li><a href="#" class="btn btn-xs process-btn" data-basic-req-id="{{br['id']}}" data-wflowconfig="{{wc}}">{{wc}}</a></li>
+                      {% for wc,wc_details in wflow_configs.iteritems() %}
+                        {% if wc_details['request_format'] ==  br['request_format'] %}
+                        <li><a href="#" class="btn btn-xs process-btn" data-basic-req-id="{{br['id']}}" data-wflowconfig="{{wc}}">{{wc}} ({{wc_details['request_format']}})</a></li>
+                        {% else %}
+                        <li><a href="#" class="btn btn-xs disabled" data-basic-req-id="{{br['id']}}" data-wflowconfig="{{wc}}">{{wc}} ({{wc_details['request_format']}})</a></li>
+                        {% endif %}
                       {% endfor %}
                       </ul>
                     </div>
@@ -172,12 +288,12 @@ function togglejobs(basicreqid){
                       <span class="glyphicon glyphicon-tasks" aria-hidden="true" style="margin-right:1em"></span><span id="jobslabel_{{br['id']}}">Show Processings</span>
                     </button>
                     <!-- Single button -->
-                    <div class="btn-group results-group">
+                    <div class="btn-group results-group" data-basic-req-id="{{br['id']}}">
                       <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                         Results <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" role="menu">
-                      {% for wc in wflow_configs %}
+                      {% for wc in wflow_configs.keys() %}
                         <li><a href="/resultview/{{request_info['analysis_id']}}/{{wc}}/{{br['id']}}" class="btn btn-xs result-btn" data-basic-req-id="{{br['id']}}" data-wflowconfig="{{wc}}">{{wc}}</a></li>
                       {% endfor %}
                       </ul>
@@ -185,12 +301,12 @@ function togglejobs(basicreqid){
 
 
                     <!-- Single button -->
-                    <div class="btn-group results-group">
+                    <div class="btn-group upload-group" data-basic-req-id="{{br['id']}}">
                       <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                         <span class="glyphicon glyphicon-upload" aria-hidden="true" style="margin-right:1em"></span> <span>Upload to RECAST</span> <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" role="menu">
-                      {% for wc in wflow_configs %}
+                      {% for wc in wflow_configs.keys() %}
                         <li><a class="btn btn-xs upload-response-btn"
                               data-point-req-id="{{pp['id']}}"
                               data-basic-req-id="{{br['id']}}"
@@ -200,11 +316,6 @@ function togglejobs(basicreqid){
                       </ul>
                     </div>
 
-
-                    <!-- <button type="button" data-basic-req-id="{{br['id']}}" data-point-req-id="{{pp['id']}}"
-                    class="btn btn-primary btn-xs upload-response-btn" aria-label="Left Align">
-                      <span class="glyphicon glyphicon-upload" aria-hidden="true" style="margin-right:1em"></span><span>Upload to RECAST</span>
-                    </button> -->
                   </span>
                   <div id="basicreq_jobs_{{br['id']}}" class="hidden">
                     <h6>Backend Information:</h6>
@@ -216,7 +327,7 @@ function togglejobs(basicreqid){
                     {% for jobdata in processing_info[br['id']] %}
                       <div>
                         <span style="font-family:monospace;">{{jobdata['job']}}</a></span>
-                        <span class="label label-{{state_map[jobdata['celery']][1]}}"><span class="glyphicon glyphicon-{{state_map[jobdata['celery']][0]}}" aria-hidden="true"></span></span>
+                        <span class="label label-{{state_map[jobdata['status']][1]}}"><span class="glyphicon glyphicon-{{state_map[jobdata['status']][0]}}" aria-hidden="true"></span></span>
                         <a href="/monitor/{{jobdata['job']}}"><span class="label label-default"><span class="glyphicon glyphicon-console" aria-hidden="true"></span> Logs</a></span></a>
                       </div>
                     {% endfor %}
