add export / upload all buttons

--- a/recastcontrolcenter/recast_interface_templates/recast_request.html
+++ b/recastcontrolcenter/recast_interface_templates/recast_request.html
@@ -276,6 +276,18 @@ function togglejobs(basicreqid){
   </ul>
 </div>
 
+<div class="btn-group upload-all-group">
+  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    Upload All <span class="caret"></span>
+  </button>
+</div>
+
+<div class="btn-group export-all-group">
+  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+    Export Data
+  </button>
+</div>
+
 <div class="row">
   <div class="col-md-12">
     <h3>Requested Parameter Points</h3>
